# alb5_lab

alb5_description/: CMakeLists.txt  manifest.xml  package.xml  urdf.rviz
alb5_description/launch/: display.launch  gazebo.launch
alb5_description/meshes/: base_link.STL  elbow_link.STL  elbow_twist_link.STL  gripper_link.STL  shoulder_link.STL  universal_base.STL  wrist_link.STL  wrist_twist_link.STL
alb5_description/urdf/: alb5.URDF  wrapper.xml
